🔗 Fix link styles on mobile
Also merges defaults.css and styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Indie Flower';
+  src: url('./fonts/IndieFlower-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Rock Salt';
+  src: url('./fonts/RockSalt-Regular.ttf');
+}
+
 html {
   font-size: 120%;
 }
@@ -9,6 +19,75 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h1 {
+  font-size: 3.5em;
+  @media screen and (min-width: 768px) {
+    font-size: 6em;
+  }
+}
+h2 {
+  font-size: 2.5em;
+  @media screen and (min-width: 768px) {
+    font-size: 4.5em;
+  }
+}
+h3 {
+  font-size: 2.25em;
+  @media screen and (min-width: 768px) {
+    font-size: 4em;
+  }
+}
+h4 {
+  font-size: 2em;
+  @media screen and (min-width: 768px) {
+    font-size: 3em;
+  }
+}
+h5 {
+  font-size: 1.5em;
+  @media screen and (min-width: 768px) {
+    font-size: 2em;
+  }
+}
+h6 {
+  font-size: 1em;
+}
+
+button {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+a {
+  box-sizing: content-box;
+  padding: 0.75lh 2ch 0.5lh 4ch;
+  margin-left: -4ch;
+  font-size: 1em;
+  color: inherit;
+
+  &:visited {
+    color: inherit;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-right: 2ch;
+    margin-left: 0;
+    margin-right: -2ch;
+  }
+
+  @media (pointer: fine) {
+    text-decoration: none;
+
+    &:hover {
+      background-image: url('./button-border.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+    }
+  }
 }
 
 .nameTitle {
@@ -86,6 +165,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   text-align: left;
   gap: 24px;
 
